--- a/DeployingWebsites101Dojo/Properties/DeployingWebsites101Dojo.targets
+++ b/DeployingWebsites101Dojo/Properties/DeployingWebsites101Dojo.targets
@@ -1,3 +1,12 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    
+    <Target Name="BeforeBuild" Condition="'$(PublishProfileName)' == '' And '$(WebPublishProfileFile)' == ''">
+        <PropertyGroup>
+            <PowerShellExe Condition=" '$(PowerShellExe)'=='' ">%WINDIR%\System32\WindowsPowerShell\v1.0\powershell.exe</PowerShellExe>
+            <ScriptLocation Condition=" '$(ScriptLocation)'=='' ">$(SolutionDir)UpdateVersion.ps1</ScriptLocation>
+            <!--Note the mis matched quotes, this is correct!-->
+            <WorkingDirectory Condition=" '$(WorkingDirectory)'=='' ">"$(SolutionDir)</WorkingDirectory>
+        </PropertyGroup>
+        <Message Text="***** Project: Version Update *****" Importance="High" />
+        <Exec Command="$(PowerShellExe) -NoProfile -ExecutionPolicy Bypass -NonInteractive -WindowStyle Hidden -File &quot;$(ScriptLocation)&quot; -RevisionNumber &quot;increment&quot; -WorkingDirectory $(WorkingDirectory)" />
+    </Target>
 </Project>
