Updates to the dojo project
Added URL re-write, added placeholder page.

--- a/DeployingWebsites101Dojo/Web.config
+++ b/DeployingWebsites101Dojo/Web.config
@@ -12,9 +12,28 @@
         <add key="ColourSetting" value="green" />
     </appSettings>
     <system.web>
-        <compilation debug="true" targetFramework="4.5.2" />
-        <httpRuntime targetFramework="4.5.2" />
+        <compilation debug="true" targetFramework="4.5.1" />
+        <httpRuntime targetFramework="4.5.1" />
     </system.web>
+    <system.webServer>
+        <!--
+        Must disable SSL being required here...
+        -->
+        <!--
+        <rewrite>
+            <rules >
+                <clear />
+                <rule name="http to https redirect" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{HTTPS}" pattern="^OFF$" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Temporary" />
+                </rule>
+            </rules>
+        </rewrite>
+        -->
+    </system.webServer>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
